--- a/template.yaml
+++ b/template.yaml
@@ -986,6 +986,7 @@ Resources:
       CodeUri: functions/users/students/
       Handler: get.lambdaHandler
       Runtime: nodejs12.x
+      Timeout: 30
       Events:
         GetEvaluationsForUser:
           Type: Api
@@ -1000,6 +1001,7 @@ Resources:
               Action:
                 - dynamodb:GetItem
                 - dynamodb:Scan
+                - cognito-idp:AdminGetUser
               Resource:
                 - !Sub
                   - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}
@@ -1007,9 +1009,13 @@ Resources:
                 - !Sub
                   - arn:${AWS::Partition}:dynamodb:${AWS::Region}:${AWS::AccountId}:table/${tableName}/index/*
                   - { tableName: !Ref UsersDDBTable}
+                - !Sub
+                  - arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/${userPoolId}
+                  - { userPoolId: !Ref CognitoUserPool}
       Environment:
         Variables:
           USERS_DDB_TABLE_NAME: !Ref UsersDDBTable
+          USER_POOL_ID: !Ref CognitoUserPool
   
   DataValidation:
     Type: AWS::Serverless::LayerVersion
