--- a/template.yaml
+++ b/template.yaml
@@ -1150,7 +1150,7 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
-      # Cors: "'*'"
+      Cors: "'*'"
       Auth:
         DefaultAuthorizer: MyCognitoAuthorizer
         Authorizers:
