--- a/functions/evaluations/export/package.json
+++ b/functions/evaluations/export/package.json
@@ -7,7 +7,8 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "nodemailer": "^6.4.6"
   },
   "scripts": {
     "test": "mocha tests/unit/"
